deployment/niche-amqp-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: cloudamqp-ext-mesh
spec:
  hosts:
  - cougar.rmq.cloudamqp.com
  ports:
  - name: rabbitmq
    number: 5672
    protocol: TCP
  location: MESH_EXTERNAL
  resolution: NONE
