deployment/niche-amqp-vs-timeout.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cloudamqp-ext-mesh
specs:
  hosts:
    - cougar.rmq.cloudamqp.com
  http:
    - timeout:  3s
      route:
        - destination:
            cougar.rmq.cloudamqp.com
          weight: 100
