deployment/niche-ingress-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: niche-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: niche
spec:
  hosts:
    - "*"
  gateways:
    - niche-gateway
  http:
    - match:
      - uri:
          prefix: "/oauth"
      route:
      - destination:
          host: niche-auth
          subset: v1
          port:
            number: 9010
        weight: 100
    - match:
      - uri:
          prefix: "/api/notes"
      route:
      - destination:
          host: niche-todox
          subset: v1
          port:
            number: 8081
        weight: 100
    - match:
      - uri:
          prefix: "/search"
      route:
      - destination:
          host: niche-web
          subset: v1
          port:
            number: 8082
        weight: 100
    #    - match:
    #        - uri:
    #            prefix: "/api"
    #      route:
    #        - destination:
    #            host: niche-greetings-a
    #            port:
    #              number: 8080
    #          weight: 100
